 * Removed previous namespace calls - now just uses the new approach.
 * Returns and prints error if invalid call (note that it can't use
    $self->log, as this uses call.

2006-10-17 moj
 * Shifted _render_fileicon to its own sub in $c->{render_fileicon}
 * Altered eprint_render and fileinfo_render to use this.

2006-10-17 cjg
 * Added Platform code (defaults to UNIX) so that cross platform issues
    can be easily handled. 
 * Made chmod and chown platform based functions.
 * Made it possible to pass a type as well as a value in EPC state.
 * Made STAFF_ONLY have type "BOOLEAN"
 * Reorder now doesn't bother if there's zero or one results.
 * Subjects Search now uses a nested view. Not perfect, but better.
 * render_input_field and render_input_field_actual no longer pass the 
    type.
 * Session now uses XML::to_string to convert strings to XHTML, as does
    repository template loading. This fixes a few bugs including the 
    xmlns in HTML one.
 * Added $session->reload_current_user and made logout call this.
 * Reworked user workflow
 * s/in_owner/has_owner/ in DataObj/User
 * Added view and edit user (both own and other)

2006-10-17 cjg 
 * Fixed tiny bug introduced by call code which broke guessing file format.
 * Fixed regexps to match new style document ids.
 * Fixed pos of new documents.
 * Added style to upload document fields table.
 * Right aligned document fields titles.

2006-10-18 cjg
 * Added action lists for all variations of eprint status and owner/editor
 * These are now used to generate quick-link buttons at the top and bottom
    of the view page.
 * All lists of actions with descriptions are now generated by a single 
    method.
 * Moved New EPrint to a screen of its own
 * Added a new actions list which is used on the top of the items page. 

2006-10-18 cjg
 * Named Sets now search correctly and have a correct help phrase.

2006-10-18 cjg
 * Deposit button on owner-view page now goes to deposit screen, not action.